--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   backend:
     build:
       context: .
-      dockerfile: docker/backend.Dockerfile
+      dockerfile: backend/Dockerfile.dev
     environment:
       - ENV=dev
     ports:
@@ -11,7 +11,7 @@ services:
   frontend:
     build:
       context: .
-      dockerfile: docker/frontend.Dockerfile
+      dockerfile: frontend/Dockerfile.dev
     ports:
       - "8080:80"
     depends_on:
