docker-compose: Add backend healthcheck

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,18 @@ services:
       - ENV=dev
     ports:
       - "8000:8000"
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "python",
+          "-c",
+          "import urllib.request; urllib.request.urlopen('http://localhost:8000/health').read()",
+        ]
+      interval: 30s
+      timeout: 2s
+      retries: 5
+      start_period: 10s
 
   frontend:
     build:
