--- a/.github/workflows/stack-host-ci.yml
+++ b/.github/workflows/stack-host-ci.yml
@@ -26,17 +26,25 @@ jobs:
       - name: Show containers
         run: docker compose ps
 
-      - name: Homepage responds in 20 seconds test
+      - name: Wait for services to be healthy
         run: |
-          for i in {1..20}; do
-            if curl -fsS http://localhost:8080 >/dev/null; then
-              echo "Frontend is serving ✅"
+          for i in {1..30}; do
+            BACKEND=$(docker inspect -f '{{.State.Health.Status}}' $(docker compose ps -q backend) 2>/dev/null || echo starting)
+            FRONTEND=$(docker inspect -f '{{.State.Health.Status}}' $(docker compose ps -q frontend) 2>/dev/null || echo starting)
+
+            echo "backend=$BACKEND frontend=$FRONTEND"
+
+            if [ "$BACKEND" = "healthy" ] && [ "$FRONTEND" = "healthy" ]; then
+              echo "All services healthy ✅"
               exit 0
             fi
-            sleep 1
+
+            sleep 2
           done
 
-          echo "Frontend did not become ready ❌"
+          echo "Services did not become healthy ❌"
+          echo "---- docker compose ps ----"
+          docker compose ps || true
           echo "---- docker compose logs ----"
           docker compose logs --no-color || true
           exit 1
