--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -14,5 +14,8 @@ FROM nginx:alpine
 # Copy built static files to nginx
 COPY --from=builder /app/dist /usr/share/nginx/html
 
+# Replace default nginx site config
+COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
